# synvoid

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.bak.toml  Cargo.lock.new  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  WINDOWS_TESTING.md  build.rs  build.sh  buildwebsite.sh  cloak  deferred.md  deny.toml  improvement_plan.md  mimes_example.txt  paper.md  plan.md  plan_ui.md  root.hints  runbuildwebsite.sh  serve.go  test_lookup.rs  test_lookup_iter.rs  test_resolver.rs  test_tokio2.rs  test_tokiocp.rs  trusted-key.key
admin-ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
admin-ui/src/: app.rs  config_docs.rs  lib.rs  styles.css
admin-ui/src/components/: confirm_dialog.rs  mod.rs  realtime_header.rs  skeleton.rs  toast.rs  tooltip.rs
admin-ui/src/hooks/: mod.rs  use_theme.rs  use_toast.rs  use_websocket.rs
admin-ui/src/pages/: alerts.rs  dashboard.rs  dns.rs  dns.ts  honeypot.rs  icmp.rs  login.rs  logs.rs  mesh.rs  mod.rs  probes.rs  process_management.rs  request_logs.rs  settings.rs  site_detail.rs  site_editor.rs  sites.rs  system_status.rs  tcp_udp.rs  threat_level.rs  tier_keys.rs  traffic_shaping.rs  upstreams.rs  workers.rs
admin-ui/src/services/: api.rs  mod.rs  websocket.rs
admin-ui/src/types/: mod.rs  presets.rs
crates/synvoid-admin/: Cargo.toml  build.rs
crates/synvoid-admin/src/: auth.rs  lib.rs  rate_limit.rs  schema.rs
crates/synvoid-app-handlers/: Cargo.toml
crates/synvoid-app-handlers/src/: dispatch.rs  lib.rs
crates/synvoid-app-server/: Cargo.toml
crates/synvoid-app-server/src/: granian.rs
crates/synvoid-auth/: Cargo.toml
crates/synvoid-auth/src/: basic.rs  lib.rs
crates/synvoid-block-store/: Cargo.toml
crates/synvoid-block-store/src/: lib.rs
crates/synvoid-challenge/: Cargo.toml
crates/synvoid-challenge/src/: css.rs  honeypot.rs  lib.rs  manager_pow.rs  pow.rs  types.rs
crates/synvoid-config/: Cargo.toml
crates/synvoid-config/src/: admin.rs  app_server.rs  bandwidth.rs  defaults.rs  honeypot_port.rs  icmp_filter.rs  lib.rs  limits.rs  main_config.rs  mesh.rs  network.rs  plugins.rs  process.rs  protection.rs  security.rs  server.rs  serverless.rs  tls.rs  tunnel.rs  upload.rs
crates/synvoid-core/: Cargo.toml
crates/synvoid-core/src/: admin_mutation.rs  block_store.rs  drain.rs  error.rs  ids.rs  lib.rs  metrics.rs  net.rs  request.rs  routing.rs  streaming_waf.rs  time.rs  traits.rs  url.rs  verdict.rs
crates/synvoid-core/tests/: admin_auth_boundary.rs  mesh_admin_edge_cases.rs
crates/synvoid-dns/: AGENTS.override.md  Cargo.toml  SKILL.md
crates/synvoid-dns/benches/: cache_bench.rs  coalescer_bench.rs  limits_bench.rs  wire_bench.rs  zone_bench.rs
crates/synvoid-dns/src/: anycast.rs  anycast_sync.rs  cache.rs  config.rs  crypto_rng.rs  dns64.rs  dnssec.rs  dnssec_key_mgmt.rs  dnssec_signing.rs  dnssec_validation.rs  doh.rs  doq.rs  dot.rs  edns.rs  firewall.rs  health.rs  hsm.rs  lib.rs  limits.rs  mesh_dnssec.rs  metrics.rs  mod.rs  notify.rs  parsed_query.rs  platform.rs  prefetch.rs  qname.rs  query_coalesce.rs  query_validator.rs  recursive.rs  recursive_cache.rs  resolver.rs  resolver_global.rs  rpz.rs  secure_server.rs  store.rs  transfer.rs  trust_anchor.rs  tsig.rs  update.rs  (+3 more)
crates/synvoid-dns/tests/: authoritative_negative.rs  axfr_ixfr_transfer_semantics.rs  control_plane_authorization.rs  control_plane_cache_completion.rs  control_plane_exclusion.rs  dns_config_fidelity.rs  dns_config_test.rs  dns_integration_test.rs  dns_interop_authoritative.rs  dns_interop_dnssec.rs  dns_interop_encrypted.rs  dns_interop_recursive.rs  dns_interop_transfers.rs  dns_interop_truncation.rs  dns_interop_update_notify.rs  dns_recursive_isolation.rs  dns_recursive_test.rs  dns_server_test.rs  dns_stress_resource_limits.rs  dnssec_known_vectors.rs  dnssec_live_signing.rs  encrypted_transport.rs  example_configs_parse.rs  health_integration.rs  ixfr_record_delta.rs  metrics_wiring.rs  notify_behavior.rs  notify_scheduling_semantics.rs  property_tests.rs  transport_lifecycle.rs  tsig_success_fixtures.rs  update_atomicity_rollback.rs  update_authorized_semantics.rs  verification_gate.rs
crates/synvoid-geoip/: Cargo.toml
crates/synvoid-geoip/src/: lib.rs  lookup.rs  manager.rs  traits.rs  updater.rs
crates/synvoid-honeypot/: AGENTS.override.md  Cargo.toml
crates/synvoid-honeypot/src/: ai_budget.rs  ai_responder_containment_tests.rs  config.rs  controller.rs  lib.rs  listener.rs  listener_tests.rs  mesh_control.rs  protocol.rs  rotation.rs  runner.rs  storage.rs  storage_writer.rs  storage_writer_tests.rs  threat_intel.rs
crates/synvoid-http/: Cargo.toml
crates/synvoid-http-client/: Cargo.toml
crates/synvoid-http-client/src/: client.rs  erased_pool.rs  lib.rs  pool.rs  request.rs  tls.rs  (+4 more)
crates/synvoid-http3/: Cargo.toml
crates/synvoid-icmp-filter/: Cargo.toml
crates/synvoid-integrity/: Cargo.toml
crates/synvoid-ipc/: Cargo.toml
crates/synvoid-mesh/: Cargo.toml  build.rs
crates/synvoid-metrics/: Cargo.toml
crates/synvoid-platform/: Cargo.toml
crates/synvoid-plugin-runtime/: Cargo.toml
crates/synvoid-proxy/: Cargo.toml
crates/synvoid-proxy-cache/: Cargo.toml
crates/synvoid-serverless/: Cargo.toml
crates/synvoid-static-files/: Cargo.toml
fuzz/: Cargo.toml  admin_mutation_result_decode.rs  blocklist_event_decode.rs  blocklist_snapshot_decode.rs  dns_message_decode.rs  fuzz_attack_detection.rs  fuzz_early_parse.rs  fuzz_ipc.rs  fuzz_protocol_proto_decode.rs  fuzz_raft_commit_notification.rs  fuzz_raft_response.rs  fuzz_serialization.rs  fuzz_serialization_new.rs  http_header_normalization.rs  http_path_normalization.rs  mesh_protocol_compressed_decode.rs  parsed_query_parse.rs  plugin_manifest.rs
fuzz/.cargo/: config.toml
pqc/: Cargo.toml
pqc/benches/: kem_bench.rs
pqc/src/: dsa.rs  kem.rs  keys.rs  lib.rs  test_vectors.rs
website/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  website-server
website/src/: challenge.html  lib.rs  server.rs  styles.css  test.css
(+2235 files in other folders)
