[package]
name = "maluwaf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "maluwaf"
path = "src/main.rs"

[[bin]]
name = "maluwaf-vpn"
path = "src/bin/maluwaf-vpn.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = ["socket-handoff", "post-quantum"]
dns = []
socket-handoff = []
daemonize = []
wireguard = ["dep:boringtun"]
icmp-filter = []
flood-ebpf = []
origin_key_exchange = []
audit = []
post-quantum = ["dep:rustls-post-quantum"]
verify-pq = []
tun-rs = []

# TODO: Remove git patch when quinn 0.11.10+ is released with fixed quinn-proto
# Tracking: https://github.com/quinn-rs/quinn/releases
# Fixes RUSTSEC-2026-0037 / CVE-2026-31812 (DoS via malformed transport parameters)
[patch.crates-io]
quinn-proto = { git = "https://github.com/quinn-rs/quinn", tag = "quinn-proto-0.11.14" }

[workspace]
members = [".", "pqc", "src/wasm_pow", "admin-ui", "examples/dynamic-plugin-example", "examples/embedded-app-example"]

[workspace.dependencies]
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
sha2 = "0.10"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2", "client", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
axum = { version = "0.8", features = ["ws", "macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
http-body = "1"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
isbot = "0.1"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"
metrics = "0.22"
metrics-exporter-prometheus = "0.18"
http = "1"
ipnetwork = "0.18"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
futures-util = "0.3"
sysinfo = "0.32"
nix = { version = "0.29", features = ["signal", "process", "socket", "fs", "net", "uio"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
aho-corasick = "1.1"
url = "2.5"
unicode-normalization = "0.1"
libinjectionrs = "0.1"

# DNS support
hickory-proto = "0.25"
hickory-resolver = { version = "0.25", features = ["system-config"] }
dns-parser = "0.8"
thiserror = { version = "2", package = "thiserror" }
getrandom = { version = "0.2", features = ["std"] }
tokio-dstip = "0.1"

clap = { version = "4", features = ["derive"] }
infer = "0.16"
yara-x = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
memmap2 = "0.9"
pin-project-lite = "0.2"
bcrypt = "0.15"
dirs = "5"
ab_glyph = "0.2"
flare = "0.1"
flate2 = "1"

# Post-Quantum Cryptography
pqc = { path = "pqc", features = ["async"] }
zeroize = { version = "1", features = ["derive"] }

# Minification
lightningcss = "1.0.0-alpha.70"
minify-html = "0.18"
minify-js = "0.6"
brotli = "6"

# File system utilities
walkdir = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# TLS + Post-Quantum Cryptography
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["prefer-post-quantum", "aws-lc-rs"] }
rustls-pki-types = "1"
rustls-post-quantum = { version = "0.2", optional = true }
x509-parser = "0.16"

# Post-Quantum Cryptography (aws-lc-rs with unstable for ML-DSA)
aws-lc-rs = { version = "1", features = ["unstable"] }

# Cryptography utilities
subtle = "2"

# HSM / PKCS#11 support
cryptoki = "0.12"

# HTTP/3 + QUIC
quinn = { version = "0.11.9", features = ["runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rcgen = "0.13"
webpki-roots = "0.26"

# WebSocket proxy (upstream connections)
tokio-tungstenite = "0.28"

# GeoIP support
maxminddb = { version = "0.27", features = ["mmap"] }
zip = "2"

# FastCGI client support
fastcgi-client = "0.10"

# Dynamic plugin loading
libloading = "0.8"

# WASM support for plugins
wasmtime = "36"
wasmtime-wasi = "36"

# WireGuard (optional - requires boringtun)
boringtun = { version = "0.7", optional = true }

# Unix domain socket support for HTTP client
hyperlocal = { version = "0.9", features = ["hyper-util"] }

# Syslog support
syslog = "6"

# Logging facade
log = "0.4"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
prost = "0.13"
prost-build = "0.13"
lru_time_cache = "0.11.11"
linked-hash-map = "0.5"
ahash = "0.8.12"
aes-gcm = "0.10.3"
async-trait = "0.1.89"
daemonize2 = "0.6.2"
digest = "0.10"
ed25519-dalek = "2.2.0"
hkdf = "0.12.4"
hmac = "0.12.1"
socket2 = "0.6.2"
httparse = "1.10.1"
pbkdf2 = "0.12.2"
sha1 = "0.10.6"
sha3 = "0.10.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base32 = "0.5.1"
libc = "0.2.182"
tonic = { version = "0.12", features = ["gzip", "prost"] }
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
chrono = "0.4"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_System_IO"] }

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[dev-dependencies]
aes-gcm = "0.10.3"
ahash = "0.8.12"
async-trait = "0.1.89"
