[package]
name = "synvoid"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "synvoid"
path = "src/main.rs"

[[bin]]
name = "synvoid-vpn"
path = "src/bin/synvoid-vpn.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = ["socket-handoff", "mesh", "dns", "erased_pool", "swagger-ui"]
dns = ["synvoid-config/dns", "synvoid-tls/dns", "dep:hickory-proto", "dep:hickory-resolver", "dep:tokio-dstip", "dep:cryptoki", "dep:getrandom"]
socket-handoff = []
wireguard = ["synvoid-tunnel/wireguard"]
icmp-filter = []
flood-ebpf = ["dep:aya"]
origin_key_exchange = ["synvoid-integrity/origin_key_exchange"]
audit = []
post-quantum = []  # Marker feature; PQ TLS handled by rustls prefer-post-quantum
verify-pq = []
tun-rs = ["synvoid-tunnel/tun-rs"]
mesh = ["synvoid-config/mesh", "synvoid-serverless/mesh", "dep:openraft"]
buffer = ["synvoid-utils/buffer"]
erased_pool = []
rkyv = []
macos-sandbox = []  # Enable macOS sandbox enforcement
test-utils = []
swagger-ui = ["dep:utoipa-swagger-ui"]
fastcgi_streaming = []  # Enable streaming FastCGI response handling

[patch.crates-io]
# Patch wasmtime from yara-x transitive dependency (RUSTSEC-2026-0096, RUSTSEC-2026-0086, etc.)
# yara-x 1.14.0 depends on wasmtime 40.0.4 which has multiple vulnerabilities
# Force all wasmtime dependencies to use 42.0.2
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v42.0.2" }

[workspace]
members = [".", "pqc", "src/wasm_pow", "admin-ui", "examples/dynamic-plugin-example", "examples/embedded-app-example", "fuzz", "crates/synvoid-utils", "crates/synvoid-config", "crates/synvoid-core", "crates/synvoid-challenge", "crates/synvoid-testkit", "crates/synvoid-tarpit", "crates/synvoid-waf", "crates/synvoid-proxy-cache", "crates/synvoid-tls", "crates/synvoid-plugin-runtime", "crates/synvoid-http-client", "crates/synvoid-serverless", "crates/synvoid-geoip", "crates/synvoid-integrity", "crates/synvoid-upstream", "crates/synvoid-tunnel", "crates/synvoid-proxy"]

[workspace.dependencies]
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
sha2 = "0.10"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2", "client", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
# rustls-native-certs moved to synvoid-http-client
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
axum = { version = "0.8", features = ["ws", "macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
http-body = "1"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Serialization - postcard for default, rkyv for high-performance paths
postcard = { version = "1", features = ["alloc"] }
# rkyv for zero-copy - uses renamed dependency to avoid lightningcss conflict
# Use package = "rkyv" to rename it
rkyv = { package = "rkyv", version = "0.8", features = ["std", "alloc"] }

toml = "0.8"
anyhow = "1"
bitflags = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# isbot moved to synvoid-waf
stegoeggo = "0.2"
regex = "1"
parking_lot = "0.12"
dashmap = "7.0.0-rc2"
arc-swap = "1"
moka = { version = "0.12", features = ["sync", "future"] }
matchit = "0.7"
memmap2 = "0.9"
metrics = "0.22"
metrics-exporter-prometheus = "0.18"
http = "1"
ipnetwork = "0.18"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
sysinfo = "0.38"
nix = { version = "0.29", features = ["signal", "process", "socket", "fs", "net", "uio", "sched"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "9.0.0-rc.3"
aho-corasick = "1.1"
unicode-normalization = "0.1"
libinjectionrs = "0.1"
bloomfilter = "2"
serde_bytes = "0.11"
synvoid-config = { path = "crates/synvoid-config" }
synvoid-http-client = { path = "crates/synvoid-http-client" }
synvoid-upstream = { path = "crates/synvoid-upstream" }
synvoid-tunnel = { path = "crates/synvoid-tunnel" }

# DNS support
hickory-proto = { version = "0.26", features = ["dnssec-ring"], optional = true }
hickory-resolver = { version = "0.26", features = ["system-config", "recursor", "dnssec-ring"], optional = true }
thiserror = { version = "2", package = "thiserror" }
getrandom = { version = "0.2", features = ["std"], optional = true }
tokio-dstip = { version = "0.1", optional = true }

clap = { version = "4", features = ["derive"] }
infer = "0.16"
yara-x = { version = "1.15", default-features = false, features = ["default-modules", "linkme"] }
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
pin-project-lite = "0.2"
bcrypt = "0.19"
dirs = "5"
flate2 = "1"
tar = "0.4"

# Post-Quantum Cryptography
pqc = { path = "pqc", features = ["async"] }
zeroize = { version = "1", features = ["derive"] }

# Minification
lightningcss = "1.0.0-alpha.71"
minify-html = "0.18"
minify-js = "0.6"
brotli = "6"

# File system utilities
walkdir = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# TLS + Post-Quantum Cryptography
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["prefer-post-quantum", "aws-lc-rs"] }
rustls-pki-types = "1"
# rustls-post-quantum removed (0 direct uses; prefer-post-quantum feature on rustls handles PQ)
x509-parser = "0.16"
# instant-acme moved to synvoid-tls

# Post-Quantum Cryptography (aws-lc-rs with unstable for ML-DSA)
aws-lc-rs = { version = "1", features = ["unstable"] }

# Cryptography utilities
subtle = "2"

# HSM / PKCS#11 support
cryptoki = { version = "0.12", optional = true }

# HTTP/3 + QUIC
quinn = { version = "0.11", features = ["runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rcgen = "0.13"
webpki-roots = "0.26"

# WebSocket proxy (upstream connections)
tokio-tungstenite = "0.28"

# GeoIP support
maxminddb = { version = "0.27", features = ["mmap"] }
zip = "2"

# FastCGI client support
fastcgi-client = "0.10"

# Dynamic plugin loading
libloading = "0.8"

# eBPF support (Linux-only - aya uses netlink APIs not available on other platforms)
aya = { version = "0.13", optional = true }

synvoid-utils = { path = "crates/synvoid-utils", features = ["buffer"] }
synvoid-core = { path = "crates/synvoid-core" }
synvoid-tarpit = { path = "crates/synvoid-tarpit" }
synvoid-challenge = { path = "crates/synvoid-challenge" }
synvoid-waf = { path = "crates/synvoid-waf" }
synvoid-plugin-runtime = { path = "crates/synvoid-plugin-runtime" }
synvoid-tls = { path = "crates/synvoid-tls" }
synvoid-proxy-cache = { path = "crates/synvoid-proxy-cache" }
synvoid-proxy = { path = "crates/synvoid-proxy" }
synvoid-serverless = { path = "crates/synvoid-serverless" }
synvoid-geoip = { path = "crates/synvoid-geoip" }
synvoid-integrity = { path = "crates/synvoid-integrity" }

# WASM support for plugins
wasmtime = { version = "42.0.2", features = ["component-model"] }

# URL parsing (already used elsewhere)
url = "2"

# WireGuard (optional - requires defguard_boringtun)
# defguard_boringtun moved to synvoid-tunnel

# Unix domain socket support for HTTP client
# hyperlocal moved to synvoid-http-client

# Syslog support
syslog = "6"

# systemd readiness notification
# sd-notify removed (0 uses in root)

# Logging facade
log = "0.4"

# OpenAPI / Swagger UI
schemars = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"], optional = true }
prost = "0.14"
prost-build = "0.14"
lru_time_cache = "0.11"
# linked-hash-map removed (0 uses in root or extracted crates)
indexmap = "2"
ahash = "0.8"
smallvec = "1"
aes-gcm = "0.10"
async-trait = "0.1"
daemonize2 = "0.6"
digest = "0.10"
ed25519-dalek = { version = "2" }
rsa = "0.9"
rand_core_06 = { package = "rand_core", version = "0.6" }
hkdf = "0.12"
hmac = "0.12"
socket2 = "0.6"
httparse = "1"
pbkdf2 = "0.12"
sha1 = "0.10"
sha3 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base32 = "0.5"
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Pipes", "Win32_System_Threading", "Win32_System_Console", "Win32_Networking_WinSock", "Win32_Security"] }
tonic = { version = "0.14", features = ["gzip", "transport", "tls-native-roots"] }
tonic-reflection = "0.14"
tonic-prost = "0.14"

# Raft consensus for global nodes
openraft = { version = "0.10.0-alpha.18", features = ["serde"], optional = true }
openraft-legacy = "0.10.0-alpha.18"
async-stream = "0.3.6"
bincode = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
chrono = "0.4"

# Fuzzing
[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[dev-dependencies]
synvoid = { path = ".", features = ["test-utils"] }
synvoid-testkit = { path = "crates/synvoid-testkit" }
libfuzzer-sys = "0.4"
proptest = "1.5"
proptest-derive = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_attack_detection"
harness = false

[[bench]]
name = "bench_normalization"
harness = false

[[bench]]
name = "bench_proxy_cache"
harness = false

[[bench]]
name = "bench_proxy_headers"
harness = false

[[bench]]
name = "bench_ratelimit"
harness = false

[[bench]]
name = "bench_dns"
harness = false
required-features = ["dns"]
