[package]
name = "admin-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "Event",
    "CloseEvent",
    "ErrorEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
] }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
