[package]
name = "synvoid-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
synvoid = { path = "..", features = ["dns"] }
synvoid-plugin-runtime = { path = "../crates/synvoid-plugin-runtime" }
http = "1"
postcard = "1"

[[bin]]
name = "fuzz_attack_detection"
path = "fuzz_attack_detection.rs"

[[bin]]
name = "fuzz_ipc"
path = "fuzz_ipc.rs"

[[bin]]
name = "fuzz_serialization"
path = "fuzz_serialization.rs"

[[bin]]
name = "fuzz_serialization_new"
path = "fuzz_serialization_new.rs"

[[bin]]
name = "fuzz_early_parse"
path = "fuzz_early_parse.rs"

[[bin]]
name = "fuzz_protocol_proto_decode"
path = "fuzz_protocol_proto_decode.rs"

[[bin]]
name = "fuzz_raft_response"
path = "fuzz_raft_response.rs"

[[bin]]
name = "fuzz_raft_commit_notification"
path = "fuzz_raft_commit_notification.rs"

[[bin]]
name = "dns_message_decode"
path = "dns_message_decode.rs"

[[bin]]
name = "plugin_manifest"
path = "plugin_manifest.rs"

[[bin]]
name = "http_path_normalization"
path = "http_path_normalization.rs"
