[package]
name = "synvoid-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
synvoid = { path = "..", features = ["dns"] }
synvoid-plugin-runtime = { path = "../crates/synvoid-plugin-runtime" }
synvoid-core = { path = "../crates/synvoid-core" }
synvoid-waf = { path = "../crates/synvoid-waf" }
synvoid-mesh = { path = "../crates/synvoid-mesh" }
synvoid-dns = { path = "../crates/synvoid-dns" }
http = "1"
postcard = "1"
serde_json = "1"

[[bin]]
name = "fuzz_attack_detection"
path = "fuzz_attack_detection.rs"

[[bin]]
name = "fuzz_ipc"
path = "fuzz_ipc.rs"

[[bin]]
name = "fuzz_serialization"
path = "fuzz_serialization.rs"

[[bin]]
name = "fuzz_serialization_new"
path = "fuzz_serialization_new.rs"

[[bin]]
name = "fuzz_early_parse"
path = "fuzz_early_parse.rs"

[[bin]]
name = "fuzz_protocol_proto_decode"
path = "fuzz_protocol_proto_decode.rs"

[[bin]]
name = "fuzz_raft_response"
path = "fuzz_raft_response.rs"

[[bin]]
name = "fuzz_raft_commit_notification"
path = "fuzz_raft_commit_notification.rs"

[[bin]]
name = "dns_message_decode"
path = "dns_message_decode.rs"

[[bin]]
name = "plugin_manifest"
path = "plugin_manifest.rs"

[[bin]]
name = "http_path_normalization"
path = "http_path_normalization.rs"

[[bin]]
name = "blocklist_event_decode"
path = "blocklist_event_decode.rs"

[[bin]]
name = "blocklist_snapshot_decode"
path = "blocklist_snapshot_decode.rs"

[[bin]]
name = "admin_mutation_result_decode"
path = "admin_mutation_result_decode.rs"

[[bin]]
name = "http_header_normalization"
path = "http_header_normalization.rs"

[[bin]]
name = "mesh_protocol_compressed_decode"
path = "mesh_protocol_compressed_decode.rs"

[[bin]]
name = "parsed_query_parse"
path = "parsed_query_parse.rs"
