[package]
name = "pqc"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Post-Quantum Cryptography utilities for SynVoid"

[dependencies]
aws-lc-rs = { version = "1", features = ["unstable"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
libcrux-ml-dsa = "0.0"
rand = "0.8"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "kem_bench"
harness = false
