[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "website-server"
path = "src/server.rs"
required-features = ["server"]

[features]
default = []
server = ["dep:tiny_http"]
axum-server = ["dep:axum", "dep:tokio", "dep:hyper", "dep:hyper-util"]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "Event",
    "CloseEvent",
    "ErrorEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Storage",
    "CustomEvent",
    "Navigator",
    "Clipboard",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "NodeList",
    "console",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dependencies.axum]
version = "0.8"
optional = true
default-features = false
features = ["ws", "macros", "json", "tokio", "http1", "http2"]

[dependencies.hyper]
version = "1"
optional = true
features = ["server", "http1", "http2"]

[dependencies.hyper-util]
version = "0.1"
optional = true
features = ["tokio", "server-auto", "server-graceful", "http1", "http2"]

[dependencies.tower-http]
version = "0.6"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["rt-multi-thread", "macros", "net"]

[dependencies.tiny_http]
version = "0.12"
optional = true
