[package]
name = "synvoid-admin"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
synvoid-core = { path = "../synvoid-core" }
synvoid-config = { path = "../synvoid-config" }
synvoid-ipc = { path = "../synvoid-ipc" }
synvoid-waf = { path = "../synvoid-waf" }
synvoid-metrics = { path = "../synvoid-metrics" }
synvoid-static-files = { path = "../synvoid-static-files" }
synvoid-app-server = { path = "../synvoid-app-server" }
axum = { version = "0.8", features = ["ws", "macros", "json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19"
parking_lot = "0.12"
metrics = "0.22"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
axum-core = "0.5"

[features]
default = []
mesh = []
dns = []
socket-handoff = []
icmp-filter = []
flood-ebpf = []
post-quantum = []
macos-sandbox = []
wireguard = []
swagger-ui = ["dep:utoipa-swagger-ui"]

[build-dependencies]
chrono = "0.4"
