[package]
name = "synvoid-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
synvoid-utils = { path = "../synvoid-utils" }
base64 = "0.22"
parking_lot = "0.12"
http = "1"

[dev-dependencies]
proptest = "1.5"
tempfile = "3"
