[package]
name = "synvoid-block-store"
version = "0.1.0"
edition = "2021"
description = "Persistent IP block store with LRU eviction and disk persistence"

[features]
default = []
mesh = ["dep:synvoid-mesh", "synvoid-mesh/mesh"]

[dependencies]
synvoid-config = { path = "../synvoid-config" }
synvoid-core = { path = "../synvoid-core" }
synvoid-utils = { path = "../synvoid-utils" }
synvoid-waf = { path = "../synvoid-waf" }
synvoid-mesh = { path = "../synvoid-mesh", optional = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "fs"] }
arc-swap = "1"
ahash = "0.8"
tracing = "0.1"
metrics = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
proptest = "1.5"
