[package]
name = "synvoid-config"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
toml = "0.8"
bytes = "1"
http = "1"
serde_json = "1"
tracing = "0.1"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
parking_lot = "0.12"
rkyv = { package = "rkyv", version = "0.8", features = ["std", "alloc"] }
sha2 = "0.10"
hex = "0.4"
base32 = "0.5"
ed25519-dalek = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hkdf = "0.12"
aes-gcm = "0.10"
pbkdf2 = "0.12"
subtle = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ipnetwork = "0.18"
pqc = { path = "../../pqc" }

[features]
dns = []
icmp-filter = []
mesh = ["dep:ed25519-dalek"]
rkyv = []

[dev-dependencies]
tempfile = "3"
