[package]
name = "synvoid-dns"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
mesh = ["dep:synvoid-mesh", "synvoid-mesh/mesh"]

[dependencies]
synvoid-core = { path = "../synvoid-core" }
synvoid-mesh = { path = "../synvoid-mesh", optional = true }
synvoid-config = { path = "../synvoid-config", features = ["dns"] }
synvoid-tls = { path = "../synvoid-tls", features = ["dns"] }
synvoid-utils = { path = "../synvoid-utils" }
synvoid-geoip = { path = "../synvoid-geoip" }
hickory-proto = { version = "0.26", features = ["dnssec-ring"] }
hickory-resolver = { version = "0.26", features = ["system-config", "recursor", "dnssec-ring"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros", "io-util", "fs"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["prefer-post-quantum", "aws-lc-rs"] }
tracing = "0.1"
thiserror = "2"
parking_lot = "0.12"
metrics = "0.22"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
futures = "0.3"
rkyv = { version = "0.8", features = ["std", "alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2" }
hkdf = "0.12"
hmac = "0.12"
sha2 = { version = "0.10", features = ["oid"] }
sha1 = "0.10"
digest = { version = "0.10", features = ["oid"] }
quinn = { version = "0.11", features = ["runtime-tokio"] }
base64 = "0.22"
tokio-dstip = "0.1"
hex = "0.4"
ipnetwork = "0.18"
ahash = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cryptoki = "0.12"
getrandom = { version = "0.2", features = ["std"] }
libc = "0.2"
lru_time_cache = "0.11"
nix = { version = "0.29", features = ["socket"] }
moka = { version = "0.12", features = ["sync", "future"] }
rand = "0.9"
rand_core_06 = { package = "rand_core", version = "0.6" }
rsa = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
subtle = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "wire_bench"
harness = false

[[bench]]
name = "zone_bench"
harness = false

[[bench]]
name = "coalescer_bench"
harness = false

[[bench]]
name = "limits_bench"
harness = false
