[package]
name = "synvoid-geoip"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
synvoid-config = { path = "../synvoid-config" }
synvoid-http-client = { path = "../synvoid-http-client" }
maxminddb = { version = "0.27", features = ["mmap"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
flate2 = "1"
tar = "0.4"
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
